// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots WidgetMonitor/Clock Afternoon 1`] = `
<storybook-wrapper>
  <app-clock>
    <div
      class="wrapper-clock"
    >
      <div
        class="time-clock"
      >
         15:15 
      </div>
      <div
        class="day-ticker"
      >
        <div>
           9.11 
        </div>
        <div>
           Tue 
        </div>
      </div>
    </div>
  </app-clock>
</storybook-wrapper>
`;

exports[`Storyshots WidgetMonitor/Clock Morning 1`] = `
<storybook-wrapper>
  <app-clock>
    <div
      class="wrapper-clock"
    >
      <div
        class="time-clock"
      >
         9:09 
      </div>
      <div
        class="day-ticker"
      >
        <div>
           9.11 
        </div>
        <div>
           Tue 
        </div>
      </div>
    </div>
  </app-clock>
</storybook-wrapper>
`;

exports[`Storyshots WidgetMonitor/Clock Running 1`] = `
<storybook-wrapper>
  <app-clock>
    <div
      class="wrapper-clock"
    >
      <div
        class="time-clock"
      >
         14:52 
      </div>
      <div
        class="day-ticker"
      >
        <div>
           2.11 
        </div>
        <div>
           Tue 
        </div>
      </div>
    </div>
  </app-clock>
</storybook-wrapper>
`;

exports[`Storyshots WidgetMonitor/Tram Tram 1`] = `
<storybook-wrapper>
  <app-tram>
    <div
      class="wrapper-tram"
    >
      <div
        class="tram-stops"
      >
        <div
          class="stop-name"
        >
          Gabelsbergerstr.
        </div>
        <div
          class="stop-cards"
        >
          <div
            class="stop-opportunities"
          >
            <div
              class="opp-line"
            >
              64
            </div>
            <div
              class="opp-direction"
            >
              Reick
            </div>
            <div
              class="opp-time"
            >
              21:01
            </div>
          </div>
          <div
            class="stop-opportunities"
          >
            <div
              class="opp-line"
            >
              12
            </div>
            <div
              class="opp-direction"
            >
              Leutewitz
            </div>
            <div
              class="opp-time"
            >
              21:05
            </div>
          </div>
          <div
            class="stop-opportunities"
          >
            <div
              class="opp-line"
            >
              12
            </div>
            <div
              class="opp-direction"
            >
              Reick
            </div>
            <div
              class="opp-time"
            >
              21:15
            </div>
          </div>
          <div
            class="stop-opportunities"
          >
            <div
              class="opp-line"
            >
              64
            </div>
            <div
              class="opp-direction"
            >
              Striesen
            </div>
            <div
              class="opp-time"
            >
              21:16
            </div>
          </div>
        </div>
        <div />
      </div>
      <div
        class="tram-stops"
      >
        <div
          class="stop-name"
        >
          Fetscherplatz
        </div>
        <div
          class="stop-cards"
        >
          <div
            class="stop-opportunities"
          >
            <div
              class="opp-line"
            >
              64
            </div>
            <div
              class="opp-direction"
            >
              Reick
            </div>
            <div
              class="opp-time"
            >
              21:03
            </div>
          </div>
          <div
            class="stop-opportunities"
          >
            <div
              class="opp-line"
            >
              12
            </div>
            <div
              class="opp-direction"
            >
              Leutewitz
            </div>
            <div
              class="opp-time"
            >
              21:07
            </div>
          </div>
          <div
            class="stop-opportunities"
          >
            <div
              class="opp-line"
            >
              10
            </div>
            <div
              class="opp-direction"
            >
              Messe
            </div>
            <div
              class="opp-time"
            >
              21:07
            </div>
          </div>
          <div
            class="stop-opportunities"
          >
            <div
              class="opp-line"
            >
              4
            </div>
            <div
              class="opp-direction"
            >
              Laubegast
            </div>
            <div
              class="opp-time"
            >
              21:07
            </div>
          </div>
        </div>
        <div />
      </div>
    </div>
  </app-tram>
</storybook-wrapper>
`;

exports[`Storyshots WidgetMonitor/Weather Animated 1`] = `
<storybook-wrapper>
  <app-weather>
    <div
      class="wrapper-weather"
    >
      <div
        class="weather-current"
      >
        <div
          class="weather-current-temperature"
        >
           0° 
        </div>
        <div
          class="weather-high-low"
        >
          <div>
            0°
          </div>
          <div>
            0°
          </div>
        </div>
        <div
          class="weather-current-temp-high-low"
        >
          <canvas
            height="120"
            id="iconCurrent"
            width="120"
          />
        </div>
      </div>
    </div>
  </app-weather>
</storybook-wrapper>
`;

exports[`Storyshots WidgetMonitor/Weather Stay 1`] = `
<storybook-wrapper>
  <app-weather>
    <div
      class="wrapper-weather"
    >
      <div
        class="weather-current"
      >
        <div
          class="weather-current-temperature"
        >
           0° 
        </div>
        <div
          class="weather-high-low"
        >
          <div>
            0°
          </div>
          <div>
            0°
          </div>
        </div>
        <div
          class="weather-current-temp-high-low"
        >
          <canvas
            height="120"
            id="iconCurrent"
            width="120"
          />
        </div>
      </div>
    </div>
  </app-weather>
</storybook-wrapper>
`;
